{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "95fe147f-0941-405a-8210-115d559c9fe1",
            "actions": [
                {
                    "name": "Melee_A",
                    "type": "Button",
                    "id": "02f1c08d-2d62-4b3c-9438-3364c8ac1462",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire_RT",
                    "type": "Button",
                    "id": "bb71cedc-a540-4dcf-800c-e2a6914c7377",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_LStick",
                    "type": "Value",
                    "id": "593b66b7-f025-4748-8d06-969d80e6384b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash_B",
                    "type": "Button",
                    "id": "176bad1c-e432-4a00-877e-d26a5f4215db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Melee_X",
                    "type": "Button",
                    "id": "c3439f67-bcc2-4c57-9cc7-82e458142c3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability_Y",
                    "type": "Button",
                    "id": "efb466f3-1836-483b-976f-3137f330203a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit_Pause",
                    "type": "Button",
                    "id": "0290dc63-1b4d-4ea1-8fcc-19793ffc9471",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "7645d436-4621-486e-bf4f-f3bd99253ba7",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60131536-a2b6-447a-824c-3b6629fbba86",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee_A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeb0c9d9-ff32-49c8-b33f-26423da75b77",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee_A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "930c8476-61b3-4c66-a796-10a15130788b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire_RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "745f60ad-33c2-4da3-9a62-a80c1789353a",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire_RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86a0d4f7-d66a-4c9b-9dcd-74feb86ecc2a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_LStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c8293e00-ca15-4de4-b91c-543fe05d8bd8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_LStick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0073e12c-5159-42d8-9ebd-70a6b1486d65",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_LStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0c00db72-043e-425c-9d0c-a48a3effaa26",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_LStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9ce1a66f-cc25-4bad-8bcc-64290cf65d3c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_LStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "017a1e50-76a8-46e3-b678-56585dcde19d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_LStick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4336310f-54f9-4c17-8313-39fb19bdef94",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash_B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb1a660a-39ed-4cdb-99da-8be34eeea987",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash_B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "535ef9a6-84ff-4096-be59-c3955b90bd31",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2cb78f0-ad13-43b7-aa03-3a18c53529ab",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f73ee3da-85b5-45dd-a905-58aaeb55df17",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0810368a-301e-4543-bf87-73be536483d2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51dd87f0-7af2-4560-9235-32646a28304b",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit_Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bd5fdfc-8a02-415d-8d2a-d114b03dc785",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit_Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b3cd78e-07a4-4591-b7ee-967e14467810",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause_Menu",
            "id": "e9b539d8-bdc7-4edf-940b-dc44a8757487",
            "actions": [
                {
                    "name": "Exit_Pause",
                    "type": "Button",
                    "id": "8ad930d6-29c2-4d67-a999-004f8ab8bb31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Navigate",
                    "type": "Value",
                    "id": "d179d63f-5e9d-4c6e-864f-3c85227640ed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Press_Enter",
                    "type": "Button",
                    "id": "f4720142-b040-441b-b610-353d9b7a68fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Press_Exit",
                    "type": "Button",
                    "id": "22c0842e-3e47-4331-a1f6-784118351712",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56e223f1-2bf0-4b3e-95dc-fbcbbe871360",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit_Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a1deb85-2b15-4602-94c7-f0a7a01357ab",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit_Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b33fbf3-34be-46fe-83b3-625eb3c4dc22",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "76dd8151-bf93-4e4d-a69a-5fad66cc9dbf",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4dcba2af-65d3-41f9-98ad-0f26f36d061b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "66514c2e-9b5e-42b4-afb8-df3960ac9199",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "84c28e2a-3d1c-4b66-938b-9b4a22ae6083",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "925bed8a-e0dc-4a18-b30c-2f0d853afbdd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "29f6365a-8e14-4645-aaa6-5c0410fa6b26",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7985c344-c7bb-4388-b55e-7d6f65a246e3",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press_Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "512f3ebb-37a6-459a-a4d7-d56a6a52889d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press_Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}